# dia-project

./: .dia-pull.toml  .dia.toml  .gitignore  license.md  license.txt  makefile  pyproject.toml  readme.md
resources/: template.j2
resources/flake8/: base.ini
resources/gitignore/: base.ignore  data-bkp.ignore  ds-base.ignore  latex-basic.ignore  latex.ignore  python.ignore  rust-basic.ignore  rust.ignore
resources/latexmkrc/: base.pl  lualatex.pl  pdflatex.pl
resources/makefile/: latex-package.mk  latex-plain-project.mk  python-package.mk
resources/prettierrc/: base.jsonc
scripts/: invoke.sh
src/dia_project/: __main__.py  arg_parsing.py  cli.py  config.toml  main.py  metaconfig.py  misc.py  processing.py  processor.py  utils.py
src/dia_project/config/: default.toml
templates/: header.j2
templates/gitignore/: base.ignore  latex-basic.ignore  rust.ignore
templates/makefile/: latex-plain-project.mk  python-package.mk
templates/markdownlint/: base.yaml
templates/prettierrc/: base.jsonc
templates/pylintrc/: base.toml
templates/readme_md/: main.md
